# SFEditor

./: .clang-format  AppIcon.c  AppIcon.h  BPerf.c  BPerf.h  BPerfData.h  BPerfDbox.c  BPerfDbox.h  BackCol.c  BackCol.h  BriefDbox.c  BriefDbox.h  Briefing.c  Briefing.h  BriefingData.h  CMakeLists.txt  CTransFunc.s  Clouds.c  Clouds.h  CloudsData.h  CoarseCoord.c  CoarseCoord.h  Config.c  Config.h  ConfigBrush.c  ConfigBrush.h  ConfigDbox.c  ConfigDbox.h  ConfigFill.c  ConfigFill.h  ConfigWand.c  ConfigWand.h  DCS_dialogue.c  DCS_dialogue.h  DFile.c  DFile.h  DFileData.h  DFileUtils.c  DFileUtils.h  DataType.h  (+327 more)
